--- a/tex/macros.tex
+++ b/tex/macros.tex
@@ -102,6 +102,10 @@
 
 \newcommand{\cad}[0]{\textnormal{c'est à dire }}
 
+\newcommand{\fd}[0]{\emph{fd}}
+
+\newcommand{\mfd}[0]{\mathit{fd}}
+
 \newcommand{\valTextwidth}[0]{\thetextwidth}
 
 \newcommand{\valTextwidthUnit}[1]{\printinunitsof{#1}\prntlen{\textwidth}}
